hphp/test/zend/good/ext/exif/tests/exif008.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image008.jpg'));
?>