hphp/test/zend/bad/ext-gd/libgd00094.php
<?php
$im = imagecreatefromxbm(dirname(__FILE__) . '/libgd00094.xbm');
var_dump($im);
?>